NIFI-15667 - Support plain text secrets in AWS Secrets Manager Parameter Provider